@@ -935,7 +935,7 @@ copy:
 
             td.ileft = ileft; td.iright = iright; td.out = out;
             ctx->internal->execute(ctx, filter_slice, &td, NULL,
-                                   FFMIN(s->out.height, ctx->graph->nb_threads));
+                                   FFMIN(s->out.height, ff_filter_get_nb_threads(ctx)));
         }
         break;
     }
